--- a/VirtoCommerce.CatalogModule.Web/Localizations/ru.VirtoCommerce.Catalog.json
+++ b/VirtoCommerce.CatalogModule.Web/Localizations/ru.VirtoCommerce.Catalog.json
@@ -247,11 +247,12 @@
       },
       "property-dictionary": {
         "title": "{{name}} словарь",
-        "subtitle": "Управление словарем",
+        "subtitle": "Управление значениями словаря",
         "labels": {
           "new-value": "Новое значение",
           "current-values": "Текущее значение",
           "value": "Значение",
+          "value-edit": "Редактирование значения словаря",
           "alias": "Альтернативное значение",
           "language-edit": "Редактировать значение",
           "language-add": "Новое значение"
@@ -263,6 +264,12 @@
         "placeholders": {
           "value": "Введите значение",
           "alias": "Введите альтернативное значение"
+        },
+        "languages": {
+          "english": "Английский",
+          "german": "Немецкий",
+          "italian": "Итальянский",
+          "russian": "Русский"
         }
       },
       "item-detail": {
