--- a/VirtoCommerce.CatalogModule.Web/Localizations/ru.VirtoCommerce.Catalog.json
+++ b/VirtoCommerce.CatalogModule.Web/Localizations/ru.VirtoCommerce.Catalog.json
@@ -254,6 +254,7 @@
           "value": "Значение",
           "value-edit": "Редактирование значения словаря",
           "alias": "Альтернативное значение",
+          "alias-description": "Идентификатор значения свойства (системное имя)",
           "language-edit": "Редактировать значение",
           "language-add": "Новое значение"
         },
