add "Modified" list

--- a/VirtoCommerce.CatalogModule.Web/Localizations/en.VirtoCommerce.Catalog.json
+++ b/VirtoCommerce.CatalogModule.Web/Localizations/en.VirtoCommerce.Catalog.json
@@ -199,7 +199,8 @@
       "property-list": {
         "subtitle": "Properties list",
         "labels": {
-          "empty-list": "None"
+          "empty-list": "None",
+          "modified": "Modified :"
         },
         "validations": {
           "required": "This field is required",
